owl-gen/src/main/java/cn/tongdun/owl/generated/OwlParser.java
package cn.tongdun.owl.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OwlParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, ADD = 7, SUB = 8, MUL = 9, DIV = 10,
            LT = 11, GT = 12, EQ = 13, LTEQ = 14, GTEQ = 15, NEQ = 16, AND = 17, OR = 18, FN_ABS = 19,
            FN_AVG = 20, FN_MUL = 21, FN_DIV = 22, FN_CEIL = 23, FN_FLOOR = 24, FN_MAX = 25, FN_MIN = 26,
            FN_RAND = 27, FN_ROUND = 28, FN_SUM = 29, FN_STD = 30, FN_VARIANCE = 31, FN_TRIM = 32,
            FN_CONCAT = 33, FN_LEN = 34, FN_UNION = 35, FN_INTERSECTION = 36, FN_APPEND = 37,
            FN_DEDUP = 38, FN_SORT = 39, FN_SUBSTR = 40, FN_CONTAINS = 41, FN_NOT_CONTAINS = 42,
            FN_NEQ = 43, FN_EQ = 44, FN_NVL = 45, FN_ISNULL = 46, FN_ISNOTNULL = 47, FN_TOSTRING = 48,
            FN_TONUMBER = 49, T_INT = 50, T_DOUBLE = 51, T_BOOLEAN = 52, T_STRING = 53, T_LIST = 54,
            K_GLB_VAR_PREFIX = 55, LP = 56, RP = 57, INT = 58, DOUBLE = 59, STRING = 60, RETURN = 61,
            IF = 62, ELSE = 63, BOOLEAN = 64, ID = 65, SEMI = 66, WS = 67, LINE_COMMENT = 68;
    public static final int
            RULE_prog = 0, RULE_block = 1, RULE_statement = 2, RULE_vardef = 3, RULE_expr = 4,
            RULE_var = 5, RULE_arr = 6, RULE_literal = 7, RULE_glbvar = 8;

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "block", "statement", "vardef", "expr", "var", "arr", "literal",
                "glbvar"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'{'", "'}'", "'='", "','", "'['", "']'", "'+'", "'-'", "'*'",
                "'/'", "'<'", "'>'", "'=='", "'<='", "'>='", "'!='", "'and'", "'or'",
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, "'int'", "'double'", "'boolean'",
                "'string'", "'list'", "'@'", "'('", "')'", null, null, null, "'return'",
                "'if'", "'else'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, "ADD", "SUB", "MUL", "DIV",
                "LT", "GT", "EQ", "LTEQ", "GTEQ", "NEQ", "AND", "OR", "FN_ABS", "FN_AVG",
                "FN_MUL", "FN_DIV", "FN_CEIL", "FN_FLOOR", "FN_MAX", "FN_MIN", "FN_RAND",
                "FN_ROUND", "FN_SUM", "FN_STD", "FN_VARIANCE", "FN_TRIM", "FN_CONCAT",
                "FN_LEN", "FN_UNION", "FN_INTERSECTION", "FN_APPEND", "FN_DEDUP", "FN_SORT",
                "FN_SUBSTR", "FN_CONTAINS", "FN_NOT_CONTAINS", "FN_NEQ", "FN_EQ", "FN_NVL",
                "FN_ISNULL", "FN_ISNOTNULL", "FN_TOSTRING", "FN_TONUMBER", "T_INT", "T_DOUBLE",
                "T_BOOLEAN", "T_STRING", "T_LIST", "K_GLB_VAR_PREFIX", "LP", "RP", "INT",
                "DOUBLE", "STRING", "RETURN", "IF", "ELSE", "BOOLEAN", "ID", "SEMI",
                "WS", "LINE_COMMENT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Owl.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OwlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(OwlParser.EOF, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitProg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(19);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(18);
                            statement();
                        }
                    }
                    setState(21);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (((((_la - 8)) & ~0x3f) == 0 && ((1L << (_la - 8)) & ((1L << (SUB - 8)) | (1L << (FN_ABS - 8)) | (1L << (FN_AVG - 8)) | (1L << (FN_CEIL - 8)) | (1L << (FN_FLOOR - 8)) | (1L << (FN_MAX - 8)) | (1L << (FN_MIN - 8)) | (1L << (FN_RAND - 8)) | (1L << (FN_ROUND - 8)) | (1L << (FN_SUM - 8)) | (1L << (FN_STD - 8)) | (1L << (FN_VARIANCE - 8)) | (1L << (FN_TRIM - 8)) | (1L << (FN_CONCAT - 8)) | (1L << (FN_LEN - 8)) | (1L << (FN_UNION - 8)) | (1L << (FN_INTERSECTION - 8)) | (1L << (FN_APPEND - 8)) | (1L << (FN_DEDUP - 8)) | (1L << (FN_SORT - 8)) | (1L << (FN_SUBSTR - 8)) | (1L << (FN_CONTAINS - 8)) | (1L << (FN_NOT_CONTAINS - 8)) | (1L << (FN_NEQ - 8)) | (1L << (FN_EQ - 8)) | (1L << (FN_NVL - 8)) | (1L << (FN_ISNULL - 8)) | (1L << (FN_ISNOTNULL - 8)) | (1L << (FN_TOSTRING - 8)) | (1L << (FN_TONUMBER - 8)) | (1L << (T_INT - 8)) | (1L << (T_DOUBLE - 8)) | (1L << (T_BOOLEAN - 8)) | (1L << (T_STRING - 8)) | (1L << (T_LIST - 8)) | (1L << (K_GLB_VAR_PREFIX - 8)) | (1L << (LP - 8)) | (1L << (INT - 8)) | (1L << (DOUBLE - 8)) | (1L << (STRING - 8)) | (1L << (RETURN - 8)) | (1L << (IF - 8)) | (1L << (BOOLEAN - 8)) | (1L << (ID - 8)) | (1L << (SEMI - 8)))) != 0));
                setState(23);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlockContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(25);
                match(T__0);
                setState(29);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 8)) & ~0x3f) == 0 && ((1L << (_la - 8)) & ((1L << (SUB - 8)) | (1L << (FN_ABS - 8)) | (1L << (FN_AVG - 8)) | (1L << (FN_CEIL - 8)) | (1L << (FN_FLOOR - 8)) | (1L << (FN_MAX - 8)) | (1L << (FN_MIN - 8)) | (1L << (FN_RAND - 8)) | (1L << (FN_ROUND - 8)) | (1L << (FN_SUM - 8)) | (1L << (FN_STD - 8)) | (1L << (FN_VARIANCE - 8)) | (1L << (FN_TRIM - 8)) | (1L << (FN_CONCAT - 8)) | (1L << (FN_LEN - 8)) | (1L << (FN_UNION - 8)) | (1L << (FN_INTERSECTION - 8)) | (1L << (FN_APPEND - 8)) | (1L << (FN_DEDUP - 8)) | (1L << (FN_SORT - 8)) | (1L << (FN_SUBSTR - 8)) | (1L << (FN_CONTAINS - 8)) | (1L << (FN_NOT_CONTAINS - 8)) | (1L << (FN_NEQ - 8)) | (1L << (FN_EQ - 8)) | (1L << (FN_NVL - 8)) | (1L << (FN_ISNULL - 8)) | (1L << (FN_ISNOTNULL - 8)) | (1L << (FN_TOSTRING - 8)) | (1L << (FN_TONUMBER - 8)) | (1L << (T_INT - 8)) | (1L << (T_DOUBLE - 8)) | (1L << (T_BOOLEAN - 8)) | (1L << (T_STRING - 8)) | (1L << (T_LIST - 8)) | (1L << (K_GLB_VAR_PREFIX - 8)) | (1L << (LP - 8)) | (1L << (INT - 8)) | (1L << (DOUBLE - 8)) | (1L << (STRING - 8)) | (1L << (RETURN - 8)) | (1L << (IF - 8)) | (1L << (BOOLEAN - 8)) | (1L << (ID - 8)) | (1L << (SEMI - 8)))) != 0)) {
                    {
                        {
                            setState(26);
                            statement();
                        }
                    }
                    setState(31);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(32);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        public StatementContext() {
        }

        public void copyFrom(StatementContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class Stat_If_ElseContext extends StatementContext {
        public TerminalNode IF() {
            return getToken(OwlParser.IF, 0);
        }

        public TerminalNode LP() {
            return getToken(OwlParser.LP, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RP() {
            return getToken(OwlParser.RP, 0);
        }

        public List<BlockContext> block() {
            return getRuleContexts(BlockContext.class);
        }

        public BlockContext block(int i) {
            return getRuleContext(BlockContext.class, i);
        }

        public TerminalNode ELSE() {
            return getToken(OwlParser.ELSE, 0);
        }

        public Stat_If_ElseContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_If_Else(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_If_Else(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_If_Else(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_ExprContext extends StatementContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SEMI() {
            return getToken(OwlParser.SEMI, 0);
        }

        public Stat_ExprContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_Expr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_Expr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_Expr(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_DefContext extends StatementContext {
        public VardefContext vardef() {
            return getRuleContext(VardefContext.class, 0);
        }

        public TerminalNode SEMI() {
            return getToken(OwlParser.SEMI, 0);
        }

        public Stat_DefContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_Def(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_Def(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_Def(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_AssignContext extends StatementContext {
        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SEMI() {
            return getToken(OwlParser.SEMI, 0);
        }

        public Stat_AssignContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_Assign(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_Assign(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_Assign(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_IfContext extends StatementContext {
        public TerminalNode IF() {
            return getToken(OwlParser.IF, 0);
        }

        public TerminalNode LP() {
            return getToken(OwlParser.LP, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode RP() {
            return getToken(OwlParser.RP, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public Stat_IfContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_If(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_If(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_If(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_ReturnContext extends StatementContext {
        public TerminalNode RETURN() {
            return getToken(OwlParser.RETURN, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Stat_ReturnContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_Return(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_Return(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_Return(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Stat_BlankContext extends StatementContext {
        public TerminalNode SEMI() {
            return getToken(OwlParser.SEMI, 0);
        }

        public Stat_BlankContext(StatementContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterStat_Blank(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitStat_Blank(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitStat_Blank(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_statement);
        try {
            setState(62);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    _localctx = new Stat_ExprContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(34);
                    expr(0);
                    setState(35);
                    match(SEMI);
                }
                break;
                case 2:
                    _localctx = new Stat_DefContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(37);
                    vardef();
                    setState(38);
                    match(SEMI);
                }
                break;
                case 3:
                    _localctx = new Stat_AssignContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(40);
                    match(ID);
                    setState(41);
                    match(T__2);
                    setState(42);
                    expr(0);
                    setState(43);
                    match(SEMI);
                }
                break;
                case 4:
                    _localctx = new Stat_IfContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(45);
                    match(IF);
                    setState(46);
                    match(LP);
                    setState(47);
                    expr(0);
                    setState(48);
                    match(RP);
                    setState(49);
                    block();
                }
                break;
                case 5:
                    _localctx = new Stat_If_ElseContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(51);
                    match(IF);
                    setState(52);
                    match(LP);
                    setState(53);
                    expr(0);
                    setState(54);
                    match(RP);
                    setState(55);
                    block();
                    setState(56);
                    match(ELSE);
                    setState(57);
                    block();
                }
                break;
                case 6:
                    _localctx = new Stat_ReturnContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(59);
                    match(RETURN);
                    setState(60);
                    expr(0);
                }
                break;
                case 7:
                    _localctx = new Stat_BlankContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(61);
                    match(SEMI);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VardefContext extends ParserRuleContext {
        public VardefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_vardef;
        }

        public VardefContext() {
        }

        public void copyFrom(VardefContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class Def_ListContext extends VardefContext {
        public TerminalNode T_LIST() {
            return getToken(OwlParser.T_LIST, 0);
        }

        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ArrContext arr() {
            return getRuleContext(ArrContext.class, 0);
        }

        public Def_ListContext(VardefContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterDef_List(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitDef_List(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitDef_List(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Def_DoubleContext extends VardefContext {
        public TerminalNode T_DOUBLE() {
            return getToken(OwlParser.T_DOUBLE, 0);
        }

        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Def_DoubleContext(VardefContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterDef_Double(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitDef_Double(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitDef_Double(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Def_IntContext extends VardefContext {
        public TerminalNode T_INT() {
            return getToken(OwlParser.T_INT, 0);
        }

        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Def_IntContext(VardefContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterDef_Int(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitDef_Int(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitDef_Int(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Def_BooleanContext extends VardefContext {
        public TerminalNode T_BOOLEAN() {
            return getToken(OwlParser.T_BOOLEAN, 0);
        }

        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Def_BooleanContext(VardefContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterDef_Boolean(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitDef_Boolean(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitDef_Boolean(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class Def_StringContext extends VardefContext {
        public TerminalNode T_STRING() {
            return getToken(OwlParser.T_STRING, 0);
        }

        public TerminalNode ID() {
            return getToken(OwlParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Def_StringContext(VardefContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).enterDef_String(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OwlListener) ((OwlListener) listener).exitDef_String(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OwlVisitor) return ((OwlVisitor<? extends T>) visitor).visitDef_String(this);
            else return visitor.visitChildren(this);
        }
    }
